@@ -1,0 +1,5 @@
+<?php
+/**
+ * @package discuss
+ */
+class disPlugin extends xPDOSimpleObject {}
