@@ -1,0 +1,6 @@
+<?php
+/**
+ * @package discuss
+ */
+require_once (strtr(realpath(dirname(dirname(__FILE__))), '\\', '/') . '/displugin.class.php');
+class disPlugin_mysql extends disPlugin {}
