@@ -1,0 +1,58 @@
+<?php
+/**
+ * @package discuss
+ */
+$xpdo_meta_map['disPlugin']= array (
+  'package' => 'discuss',
+  'table' => 'discuss_plugins',
+  'fields' => 
+  array (
+    'class' => '',
+    'description' => '',
+    'path' => '',
+    'event' => '',
+    'priority' => 0,
+  ),
+  'fieldMeta' => 
+  array (
+    'class' => 
+    array (
+      'dbtype' => 'varchar',
+      'precision' => '50',
+      'phptype' => 'string',
+      'null' => false,
+      'default' => '',
+    ),
+    'description' => 
+    array (
+      'dbtype' => 'text',
+      'phptype' => 'string',
+      'null' => false,
+      'default' => '',
+    ),
+    'path' => 
+    array (
+      'dbtype' => 'text',
+      'phptype' => 'string',
+      'null' => false,
+      'default' => '',
+    ),
+    'event' => 
+    array (
+      'dbtype' => 'varchar',
+      'precision' => '50',
+      'phptype' => 'string',
+      'null' => false,
+      'default' => '',
+    ),
+    'priority' => 
+    array (
+      'dbtype' => 'tinyint',
+      'precision' => '1',
+      'phptype' => 'boolean',
+      'attributes' => 'unsigned',
+      'null' => false,
+      'default' => 0,
+    ),
+  ),
+);
