@@ -13,9 +13,23 @@ if ($post == null) return $modx->error->failure($modx->lexicon('discuss.post_err
 /* set fields */
 $post->fromArray($scriptProperties);
 
+$rs = $modx->invokeEvent('OnDiscussBeforePostSave',array(
+    'post' => &$post,
+    'mode' => 'modify',
+));
+$canSave = $discuss->getEventResult($rs);
+if (!empty($canSave)) {
+    return $modx->error->failure($canSave);
+}
+
 /* save post */
 if ($post->save() == false) {
     return $modx->error->failure($modx->lexicon('discuss.post_err_save'));
 }
+
+$modx->invokeEvent('OnDiscussPostSave',array(
+    'post' => &$post,
+    'mode' => 'modify',
+));
 
 return $modx->error->success('',$post);
